# ChessEngine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_docker.sh  fixlineendings.ps1  fixlineendings.sh  main.py  node_engine_profile.py  pyproject.toml  requirements.txt  ruff.toml  run_tests.sh  search_profiler.py  unit_tests.py  util.py
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
data/raw/example_fens/: HardM2.fen  M01.fen  M02.fen  M03.fen  M04.fen  M06.fen  M07.fen  M08.fen  M09.fen  M10.fen  M11.fen  M12.fen
data/raw/simple_games/: 2.pgn  3.pgn  5.pgn  7.pgn  8.pgn
docs/: deep_cnn_eval_readme.md
notebooks/data_processing/: prepare_games_to_transformer.ipynb  process_lichess_evals.ipynb  to_tensor.py
notebooks/model_training/: test_model.ipynb  train_simple_nn.ipynb
src/engine/: config.py  constants.py  eval.py  load_games.py  main.py  minimax.py  simple_eval.py  to_tensor.py  transposition_table.py  zobrist.py
src/engine/evaluators/: complex_eval.py  deep_cnn_eval.py  deep_nn_eval.py  eval.py  mock_eval.py  nn_eval.py  simple_eval.py  simple_nn_eval.py
src/engine/search/: minimax.py  move_ordering.py  transposition_table.py  zobrist.py
src/games/: 1.pgn  10.pgn  2.pgn  3.pgn  4.pgn  5.pgn  6.pgn  7.pgn  8.pgn  9.pgn
src/io/: load_games.py  to_tensor.py
src/io_utils/: load_games.py  process_lichess_games.py  to_tensor.py
tests/: deep_cnn_eval_test.py  eval_test.py  load_games_test.py  minimax_test.py  simple_eval_test.py  simple_nn_eval_test.py  test_minimax_nn_eval.py  test_nn_eval.py  to_tensor_test.py  zobrist_test.py
tests/evaluators/: complex_eval_test.py  mock_eval_test.py  simple_eval_test.py
tests/search/: minimax_test.py  transposition_table_test.py  zobrist_test.py
