[project]
name = "ChessEngine"
version = "0.1.0"
description = "Neural Network Chess Engine"
authors = [
    { name = "Ethan Perry", email = "86326912+wheres-perry@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
exclude = ["notebooks"]

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "*", source = "pytorch-cpu" }
numpy = "^2.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
