[project]
name = "ChessEngine"
version = "0.1.0"
description = "Neural Network Chess Engine"
authors = [
    { name = "Ethan Perry", email = "86326912+wheres-perry@users.noreply.github.com" },
]
requires-python = ">=3.11"

[tool.poetry]
package-mode = false
exclude = [
    "notebooks",
    "data",
    "tests",
    ".pytest_cache",
    "__pycache__",
    ".vscode",
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.6"
chess = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
